# client1

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md  instruction.md  interface-protocol.md  product-backlog.md
agents/: README.md  developer.agent.md  handoff-rules.md  reviewer.agent.md  scrum-master.agent.md  setup-manager.agent.md
backlogs/: product-backlog.md
backlogs/sprints/: README.md  sprint-1-backlog.md  sprint-1-report.md  sprint-2-backlog.md  sprint-2-report.md  sprint-end-report-example.md  sprint-report-template.md
docs/: project-summary.md  scrum-operating-rules.md
include/: mainwindow.h  rest_client.h  video_receiver_thread.h  video_source.h
skills/: developer-skills.md  reviewer-skills.md
skills/setup-manager/: SKILL.md  setup-ubuntu.sh
src/: mainwindow.cpp  rest_client.cpp  video_receiver_thread.cpp
tests/: mock_http_server.h  mock_video_source.h  test_mainwindow.cpp
